[package]
name = "lisp-balance"
version = "0.1.0"
edition = "2024"
description = "Fix unbalanced parentheses in Lisp code using parinfer"
authors = ["Lisper"]

[dependencies]
parinfer_rust = { git = "https://github.com/eraserhd/parinfer-rust.git" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
